# code-assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  releases.yml
code_assistant/: __init__.py  app.py  assistants.py  code_assistant.py  main.py
code_assistant/constants/: big_fasthtml_context.py  config.py  css_text.py  post_message_listener_src.py  small_fasthtml_context.py  starter_app.py
code_assistant/constants/context/: fasthtml_llms_txt.py  htmx_context.py  small_fasthtml_context.py
code_assistant/generated_apps/calculator_app/: app.py
code_assistant/generated_apps/fast_game/: app.py
code_assistant/generated_apps/fasthtml_k8s_app/: app.py
code_assistant/generated_apps/fasthtml_mortgage_calculator/: app.py
code_assistant/generated_apps/graphing_calculator/: app.py
code_assistant/generated_apps/minecraft_clone/: app.py
code_assistant/generated_apps/photo_book_app/: app.py
code_assistant/generated_apps/riddle_generator/: app.py
code_assistant/generated_apps/roll_dice_app/: app.py
code_assistant/generated_apps/scavenger_hunt_app/: app.py
code_assistant/generated_apps/sudoku_app/: app.py
code_assistant/generated_apps/tick_tack_toe/: app.py
code_assistant/generated_apps/trivia_app/: app.py
code_assistant/routes/: chat_message.py  code.py  context.py  edit.py  file_rt.py  fix_errors.py  home.py  preview.py  set_keys.py  update_provider.py  upload.py
code_assistant/scripts/: migrate_to_project_dirs.py
code_assistant/tests/: simple.py
code_assistant/tests/fixtures/: 500_error_requires_details_to_fix.py  body_params_shorthand.py  body_params_verbose.py  method_post_path_test.py
code_assistant/util/: constants.py  error_app.py  file_util.py
code_assistant/util/constants/: post_message_listener_src.py  scroll_script_src.py  small_fasthtml_context.py
scripts/: mp4_to_gif.sh  publish.sh
