[project]
name = "code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ast-grep-py>=0.26.3",
    "astra-assistants>=2.1.0.19",
    "python-fasthtml>=0.5.1",
]

[project.scripts]
ca = "code_assistant:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "code-assistant"
version = "0.0.1"
description = "A FastHTML app that builds FastHTML apps"
authors = ["phact <estevezsebastian@gmail.com>"]
include = [
    "code_assistant/generated_apps/*"
]

[tool.poetry.scripts]
ca = "code_assistant:app"
code-assistant = "code_assistant.code_assistant:app"

[tool.poetry.dependencies]
python = "^3.10.12,<3.12"
ast-grep-py= "^0.26.3"
astra-assistants= "^2.1.0.19"
python-fasthtml= "^0.5.1"
